--- a/.github/workflows/jd_unsubscribe.yaml
+++ b/.github/workflows/jd_unsubscribe.yaml
@@ -1,8 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: 京东取消关注❌
-
+name: try
 on:
     workflow_dispatch:
     schedule:
@@ -10,7 +9,7 @@ on:
     watch:
         types: [started]
     repository_dispatch:
-        types: jd_unsubscribe
+        types: try
 
 jobs:
     build:
@@ -26,9 +25,9 @@ jobs:
             - name: 安装依赖包
               run: |
                   npm install
-            - name: "运行【京东取消关注】"
+            - name: "运行try"
               run: |
-                  node onlyOneExecute.js
+                  node trye.js
               env:
                   JD_COOKIE: ${{ github.event.client_payload.JD_COOKIE || secrets.JD_COOKIE }}
                   JD_DEBUG: ${{ github.event.client_payload.JD_DEBUG || secrets.JD_DEBUG }}
