--- a/.github/workflows/jd_unsubscribe.yaml
+++ b/.github/workflows/jd_unsubscribe.yaml
@@ -28,7 +28,7 @@ jobs:
                   npm install
             - name: "运行try"
               run: |
-                  node trye.js
+                  node try.js
               env:
                   JD_COOKIE: ${{ github.event.client_payload.JD_COOKIE || secrets.JD_COOKIE }}
                   JD_DEBUG: ${{ github.event.client_payload.JD_DEBUG || secrets.JD_DEBUG }}
