--- a/.github/workflows/jd_try.yaml
+++ b/.github/workflows/jd_try.yaml
@@ -1,12 +1,12 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: 京东试用
+name: try
 
 on:
     workflow_dispatch:
     schedule:
-        - cron: "0 15 * * *"
+        - cron: "0 18 * * *"
     watch:
         types: [started]
     repository_dispatch:
@@ -17,16 +17,15 @@ jobs:
         runs-on: ubuntu-latest
         if: github.event.repository.owner.id == github.event.sender.id
         steps:
-            - name: 拉取代码
-              uses: actions/checkout@v2
-            - name: Use Node.js
+            - uses: actions/checkout@v1
+            - name: Use Node.js 10.x
               uses: actions/setup-node@v1
               with:
-                  node-version: "12.x"
-            - name: 安装依赖包
+                  node-version: 10.x
+            - name: npm install
               run: |
                   npm install
-            - name: "运行【试用】"
+            - name: "运行 【试用】"
               run: |
                   node try.js
               env:
@@ -47,5 +46,4 @@ jobs:
                   QYWX_AM: ${{ github.event.client_payload.QYWX_AM || secrets.QYWX_AM }}
                   PUSH_PLUS_TOKEN: ${{ github.event.client_payload.PUSH_PLUS_TOKEN || secrets.PUSH_PLUS_TOKEN }}
                   PUSH_PLUS_USER: ${{ github.event.client_payload.PUSH_PLUS_USER || secrets.PUSH_PLUS_USER }}
-                  UN_SUBSCRIBES: ${{ github.event.client_payload.UN_SUBSCRIBES || secrets.UN_SUBSCRIBES }}
-                  SYNCURL: https://github.com/wuzhi01/MyActions/raw/main/jd_unsubscribe.js
+                  SYNCURL: https://github.com/wuzhi01/MyActions/raw/main/jd_bean_change.js
